@@ -357,6 +357,7 @@ do
         	WebDAV      	"WebDAV to share local content with Apache" \
         	SMB      	"Share files with SAMBA" \
         	OwnCloud      	"Access your data from all your devices" \
+        	GitServer      	"Use your RPi like a Git Server" \
             	FWork      	"Wordpress, Node.js among others" \
         	DB      	"MySQL+PHP5 connector" 2>"${INPUT}"
 
@@ -371,6 +372,7 @@ do
         	WebDAV) 	./scripts/server/webdav.sh ;;
         	SMB) 	./scripts/server/fileserver.sh ;;
         	OwnCloud) 	sudo ./scripts/server/owncloud.sh ;;
+        	GitServer) 	./scripts/server/gitserver.sh ;;
             	FWork)		./scripts/server/fwork.sh ;;
         	DB) 		./scripts/server/db.sh ;;
 	esac
